z-index fix

--- a/frontend/src/components/Chat/Chat.scss
+++ b/frontend/src/components/Chat/Chat.scss
@@ -16,7 +16,7 @@ $chat-header: #a1bbd4;
     background-color: white;
     left: 10rem;
     bottom: 0;
-    z-index: 1;
+    z-index: 3;
     display: flex;
     flex-direction: column; /* Stack child elements vertically */
     max-height: 90vh; /* Allow it to grow up to 90% of the viewport height */
